Iniciando a parte de resultados

--- a/Frontend/visaosisu/src/components/pages/Home.module.css
+++ b/Frontend/visaosisu/src/components/pages/Home.module.css
@@ -25,6 +25,14 @@ div.home p{
     font-size: 1em;
     font-weight: 300;
 }
+.logo{
+    display: flex;
+    justify-content: center;
+}
+.logo>img{
+    width: 54px;
+    height: 52px;
+}
 .buttonContainer{
     display: flex;
     justify-content: center;
