--- a/Frontend/visaosisu/src/components/ResultadoNotas.module.css
+++ b/Frontend/visaosisu/src/components/ResultadoNotas.module.css
@@ -3,7 +3,7 @@
     justify-content: flex-start;
     flex-direction: column;
 }
-.resultado * {
+.resultado > * {
     text-align: justify;
     margin-bottom: 5px;
 }
