Aumentando o tamanho do texto que mostra o resultado e vercel.json

--- a/Frontend/visaosisu/src/components/ResultadoCota.module.css
+++ b/Frontend/visaosisu/src/components/ResultadoCota.module.css
@@ -15,6 +15,9 @@
 .notaDia{
     font-size: 1.3em;
 }
+.tituloNota{
+    font-size: 1.3em;
+}
 .nota{
     background-color: white;
     padding: 10px;
