Concertando detalhes do front end

--- a/Frontend/visaosisu/src/components/ResultadoNotas.module.css
+++ b/Frontend/visaosisu/src/components/ResultadoNotas.module.css
@@ -11,3 +11,13 @@
     font-weight: 700;
     margin-bottom: 10px;
 }
+table{
+    border-collapse: collapse;
+}
+td , th{
+    border: 1px solid black;
+    padding: 8px;
+}
+th{
+    background-color: #D9D9D9;
+}
